--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - APP_ENV=local
       - APP_DEBUG=true
       - APP_KEY=${APP_KEY}
+      - APACHE_DOCUMENT_ROOT=/var/www/html/public
     networks:
       - db
 
