--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@heroicons/react": "^2.1.4",
         "react-hot-toast": "^2.4.1",
+        "react-select": "^5.8.0",
         "sweetalert2": "^11.12.1"
     }
 }
