--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.4",
+        "clsx": "^2.1.1",
         "react-hot-toast": "^2.4.1",
         "react-select": "^5.8.0",
         "sweetalert2": "^11.12.1"
