--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "clsx": "^2.1.1",
         "react-hot-toast": "^2.4.1",
         "react-select": "^5.8.0",
+        "react-tailwindcss-datepicker": "^1.6.6",
         "sweetalert2": "^11.12.1"
     }
 }
