--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@heroicons/react": "^2.1.4",
         "clsx": "^2.1.1",
         "react-hot-toast": "^2.4.1",
+        "react-number-format": "^5.4.0",
         "react-select": "^5.8.0",
         "react-tailwindcss-datepicker": "^1.6.6",
         "sweetalert2": "^11.12.1"
